--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,9 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 list( APPEND CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS} -ftest-coverage -fprofile-arcs")
 
 
-add_executable(GP2BaseCode src/main.cpp include/Common.h)
-target_link_libraries(GP2BaseCode ${SDL2_LIBRARY})
-include_directories(GP2BaseCode include/ ${SDL2_INCLUDE_DIR})
+add_executable(GP2BaseCode src/main.cpp src/Graphics.cpp include/Common.h include/Graphics.h)
+target_link_libraries(GP2BaseCode ${SDL2_LIBRARY} ${OPENGL_LIBRARIES})
+include_directories(GP2BaseCode include/ ${OPENGL_INCLUDE_DIRS} ${SDL2_INCLUDE_DIR})
 
 if (MSVC)
 add_custom_command(TARGET GP2BaseCode POST_BUILD
@@ -16,3 +16,5 @@ add_custom_command(TARGET GP2BaseCode POST_BUILD
 endif (MSVC)
 
 find_package(SDL2 REQUIRED)
+
+find_package(OpenGLREQUIRED)
