--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ find_package(GLEW REQUIRED)
 find_package(GLM REQUIRED)
 find_package(FBX REQUIRED)
 
-add_executable(GP2BaseCode src/main.cpp src/Graphics.cpp src/Shader.cpp src/Texture.cpp src/FileSystem.cpp include/Common.h include/Graphics.h include/Shader.h include/Vertices.h include/Texture.h include/FileSystem.h include/Mesh.h)
+add_executable(GP2BaseCode src/main.cpp src/Graphics.cpp src/Shader.cpp src/Texture.cpp src/FileSystem.cpp src/FBXLoader.cpp include/Common.h include/Graphics.h include/Shader.h include/Vertices.h include/Texture.h include/FileSystem.h include/Mesh.h include/FBXLoader.h)
 include_directories(GP2BaseCode include/ ${OPENGL_INCLUDE_DIRS} ${SDL2_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIR} ${FBX_INCLUDE_DIR})
 # create the program
 target_link_libraries(GP2BaseCode ${SDL2_LIBRARY} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${SDL2IMAGE_LIBRARY} ${FBX_LIBRARY})
