--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,13 @@ project (GP2BaseCode)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 list( APPEND CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS} -ftest-coverage -fprofile-arcs")
 
-set(CMAKE_PREFIX_PATH "C:/Dev/glew/include")
-set(CMAKE_LIBRARY_PATH "C:/Dev/glew/lib/Release/x64")
+set(CMAKE_PREFIX_PATH "C:/Users/Connall/Desktop/GP2/glew-1.12.0-win32/glew-1.12.0/include")
+set(CMAKE_LIBRARY_PATH "C:/Users/Connall/Desktop/GP2/glew-1.12.0-win32/glew-1.12.0/bin/Release/x64")
 
 find_package(OpenGL REQUIRED)
 find_package(SDL2 REQUIRED)
 find_package(SDL2_Image REQUIRED)
-find_package(SDL2_TTF REQUIRED)
+find_package(SDL2_ttf REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(GLM REQUIRED)
 find_package(FBX REQUIRED)
