--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ find_package(GLM REQUIRED)
 find_package(FBX REQUIRED)
 
 add_executable(GP2BaseCode src/main.cpp src/Graphics.cpp src/Shader.cpp src/Texture.cpp src/FBXLoader.cpp src/FileSystem.cpp
-include/Common.h include/FBXLoader.h include/Graphics.h include/Shader.h include/Vertices.h include/Texture.h include/Mesh.h include/FileSystem.h assets/shaders/ambientFS.glsl assets/shaders/ambientVS.glsl assets/shaders/diffuseFS.glsl assets/shaders/diffuseVS.glsl)
+include/Common.h include/FBXLoader.h include/Graphics.h include/Shader.h include/Vertices.h include/Texture.h include/Mesh.h include/FileSystem.h assets/shaders/ambientFS.glsl assets/shaders/ambientVS.glsl assets/shaders/diffuseFS.glsl assets/shaders/diffuseVS.glsl assets/shaders/specularFS.glsl assets/shaders/specularVS.glsl)
 
 include_directories(GP2BaseCode include/ ${OPENGL_INCLUDE_DIRS} ${SDL2_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIR} ${SDL2_TTF_INCLUDE_DIR} ${FBX_INCLUDE_DIR})
 # create the program
